--- a/_posts/2014-07-15-project-4.markdown
+++ b/_posts/2014-07-15-project-4.markdown
@@ -1,11 +1,61 @@
 ---
 layout: default
 modal-id: 4
-date: 2014-07-15
+date: 2023-10-27
 img: cupcake.png
-alt: image-alt
-project-date: April 2014
-client: Start Bootstrap
-category: Web Development
-description: Use this area of the page to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.
+alt: Cupcake Flavors
+project-date: Coming Fall/Winter 2023
+client: Your Bakery Name
+category: Menu
+title: Cupcake Flavors & Specials
 ---
+
+### **Cupcake Pricing & Minimum Orders:**
+#### **Regular Cupcakes:**
+- **Price:** $3 each 
+- **Minimum order:** 1dz per flavor
+
+#### **Mini Cupcakes:**
+- **Price:** $1.50 each 
+- **Minimum order:** 2dz per flavor
+
+![Classic Vanilla Cupcake](/images/vanilla-cupcake.jpg)
+
+## **Available Cupcake Flavors:**
+### - 🧁 **Classic Vanilla**
+### - 🧁 **Almond**
+### - 🧁 **Chocolate**
+### - 🧁 **Confetti**
+### - 🧁 **Caramel**
+
+---
+
+### **Buttercream Flavors:**
+### - 🍦 **Vanilla**
+### - 🍦 **Almond**
+### - 🍦 **Chocolate**
+### - 🍦 **Strawberry**
+### - 🍦 **Caramel**
+### - 🍦 **Peanut Butter**
+### - 🍦 **Dye-free Black Oreo Cookie Butter** (+ $3.00 per dozen)
+
+---
+
+### **Cupcake Specials Pricing & Minimum Orders:**
+#### **Regular Special Cupcakes:**
+- **Price:** $3.50 each 
+- **Minimum order:** 1dz per flavor
+
+#### **Mini Special Cupcakes:**
+- **Price:** $1.75 each 
+- **Minimum order:** 2dz per flavor
+
+## **Special Cupcake Flavors:**
+### - 🌟 **S'mores**
+### - 🌟 **Hot Cocoa**
+### - 🌟 **Death By (Black) Chocolate**
+### - 🌟 **Chocolate Peanut Butter Lovers**
+
+---
+
+[Order Now](#) <!-- Replace '#' with the link to your ordering page -->
