--- a/_posts/2014-07-17-project-2.markdown
+++ b/_posts/2014-07-17-project-2.markdown
@@ -1,11 +1,19 @@
 ---
 layout: default
 modal-id: 2
-date: 2014-07-17
+date: 2023-10-27
 img: cake-slice.png
-alt: image-alt
-project-date: April 2014
-client: Start Bootstrap
-category: Web Development
-description: Use this area of the page to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.
+alt: Special Occasion Cakes
+project-date: Coming 2024
+client: Your Bakery Name
+category: Menu
+title: Special Occasion Cakes
 ---
+
+*Prices will vary.*
+
+**Coming 2024.**
+
+---
+
+[Order Inquiry](#) <!-- Replace '#' with the link to your inquiry or contact page -->
