--- a/_posts/2014-07-16-project-3.markdown
+++ b/_posts/2014-07-16-project-3.markdown
@@ -2,7 +2,7 @@
 layout: default
 modal-id: 3
 date: 2023-10-27
-img: cookie.jpg
+img: IMG_3726.heic
 alt: Cookie Flavors
 project-date: Coming Fall/Winter 2023
 client: Your Bakery Name
