--- a/_posts/2014-07-17-project-2.markdown
+++ b/_posts/2014-07-17-project-2.markdown
@@ -2,7 +2,7 @@
 layout: default
 modal-id: 2
 date: 2023-10-27
-img: cashews.png
+img: CASHEWS.png
 alt: Special Occasion Cakes
 project-date: Coming 2024
 client: Your Bakery Name
